<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/movieCoverMargin"
            android:contentDescription="@string/movie"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/btf1" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            style="@style/AppText.Title"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/movieCoverMargin"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cover"
            tools:text="Movie Title" />

        <CheckBox
            android:id="@+id/likeBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/movieCoverMargin"
            android:text="@string/likeBoxText"
            style="@style/AppText.Title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/commentBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/comment"
            android:lines="3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:importantForAutofill="no"
            android:inputType="none" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            style="@style/AppText"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/movieCoverMargin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris a sodales leo. Fusce at interdum nisl, sed auctor enim. Phasellus accumsan molestie tempor. Morbi convallis volutpat erat, id semper ante. Pellentesque elementum massa ac sem luctus rhoncus. Maecenas ut eros eu turpis tempus posuere id ut elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean cursus lectus eget ipsum ultricies tincidunt. Morbi porttitor quam mi, a condimentum mauris euismod non.

Aenean ac rutrum libero, eu varius est. Pellentesque id sapien ac enim ullamcorper vestibulum eget sodales magna. Praesent consectetur lacus odio. Integer ac tempus nisl. Suspendisse porttitor, tellus nec aliquet efficitur, eros lectus bibendum tortor, id malesuada enim dolor vitae odio. Proin non tortor tempor, varius velit a, venenatis elit. Curabitur ornare nibh est, non elementum magna tempus a. Phasellus pretium turpis ex, non vulputate neque lacinia a. Phasellus nec libero tempor, mattis diam ac, ornare ligula. Donec fringilla lectus sem, vitae pretium mauris dignissim ut. Fusce urna erat, pharetra vitae dictum eu, suscipit vel elit. Cras venenatis sit amet augue sed volutpat. Ut facilisis eu nibh in facilisis. Nunc facilisis hendrerit mollis. Vestibulum metus dolor, ultrices eget leo quis, rhoncus feugiat orci.

Morbi quis augue arcu. Ut pretium eros nisi, ultrices convallis enim cursus vitae. Vestibulum vitae orci vel magna commodo ultrices. Sed semper sodales varius. Pellentesque vehicula malesuada mi, id viverra urna egestas eu. Fusce eleifend nibh tortor, eu rhoncus lectus semper et. Sed in fermentum magna. Sed cursus, neque ut iaculis hendrerit, orci lorem pellentesque dui, placerat fermentum velit neque sed ex. Etiam semper tempor egestas. Etiam nec risus ut lorem auctor lacinia ac non ipsum. Proin hendrerit est maximus sapien suscipit bibendum. In et maximus odio, non sagittis sapien. Vivamus ultricies quam congue justo dignissim, tempor porta turpis euismod. Suspendisse in blandit dui, sed accumsan tortor. Integer elementum sem in venenatis blandit.

Duis convallis turpis justo, sed maximus ante imperdiet id. In eros nibh, imperdiet eget justo et, fermentum malesuada ante. Vivamus at eleifend lorem, id sagittis magna. Morbi molestie pulvinar sapien, non sollicitudin nisi. Sed rhoncus leo a enim mollis, id iaculis lacus vulputate. Suspendisse tempor sapien ut sagittis iaculis. Vestibulum consequat feugiat libero, et vulputate tellus porttitor at. In sed odio urna. Maecenas magna diam, gravida in semper non, luctus nec nunc. Nunc vulputate arcu nulla, sed mattis ante semper quis. Pellentesque tristique mi eget facilisis rhoncus. Nulla consequat odio quis dolor hendrerit, eget suscipit tortor semper. Ut sollicitudin, purus eget interdum condimentum, leo justo hendrerit ligula, nec cursus velit turpis a massa. Donec posuere ultrices finibus. Nulla eget lectus pharetra, egestas augue at, maximus dui.

Nam ut justo in elit lobortis rutrum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque hendrerit cursus magna quis hendrerit. Donec ac tellus at nunc mollis finibus. Sed ac posuere est, vel semper mi. Cras mattis rhoncus magna, sit amet pellentesque arcu volutpat eu. Aliquam mollis lacus eget elit tempor condimentum. Donec ligula lacus, condimentum a eros sed, pellentesque imperdiet lorem. Donec sed ultrices eros. Vestibulum quis finibus elit. Quisque in rhoncus augue. Donec erat purus, sagittis in maximus non, mattis in dolor. Maecenas ultrices gravida auctor." />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>