<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000">

        <Button
            android:id="@+id/invite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:width="100dp"
            android:height="100dp"
            android:text="@string/invite"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/firstGroup"
            android:layout_width="0dp"
            android:layout_height="@dimen/movieGroupHeight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/secondGroup"
            android:layout_width="0dp"
            android:layout_height="@dimen/movieGroupHeight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstGroup" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/thirdGroup"
            android:layout_width="0dp"
            android:layout_height="@dimen/movieGroupHeight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/secondGroup" />

        <ImageView
            android:id="@+id/firstMovieImage"
            android:layout_width="@dimen/movieCoverWidth"
            android:layout_height="0dp"
            android:layout_margin="@dimen/movieCoverMargin"
            android:contentDescription="@string/movie"
            app:layout_constraintBottom_toBottomOf="@+id/firstGroup"
            app:layout_constraintLeft_toLeftOf="@id/firstGroup"
            app:layout_constraintTop_toTopOf="@id/firstGroup"
            tools:src="@drawable/btf1" />
        <ImageView
            android:id="@+id/secondMovieImage"
            android:layout_width="@dimen/movieCoverWidth"
            android:layout_height="0dp"
            android:layout_margin="@dimen/movieCoverMargin"
            android:contentDescription="@string/movie"
            app:layout_constraintBottom_toBottomOf="@+id/secondGroup"
            app:layout_constraintLeft_toLeftOf="@id/secondGroup"
            app:layout_constraintTop_toTopOf="@id/secondGroup"
            tools:src="@drawable/btf2" />
        <ImageView
            android:id="@+id/thirdMovieImage"
            android:layout_width="@dimen/movieCoverWidth"
            android:layout_height="0dp"
            android:layout_margin="@dimen/movieCoverMargin"
            android:contentDescription="@string/movie"
            app:layout_constraintBottom_toBottomOf="@+id/thirdGroup"
            app:layout_constraintLeft_toLeftOf="@id/thirdGroup"
            app:layout_constraintTop_toTopOf="@id/thirdGroup"
            tools:src="@drawable/btf2" />

        <Button
            android:id="@+id/firstButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/moveButtonHeight"
            android:layout_margin="@dimen/movieCoverMargin"
            android:text="@string/details"
            app:layout_constraintBottom_toBottomOf="@id/firstGroup"
            app:layout_constraintLeft_toRightOf="@id/firstMovieImage"
            app:layout_constraintRight_toRightOf="@id/firstGroup"/>
        <Button
            android:id="@+id/secondButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/moveButtonHeight"
            android:layout_margin="@dimen/movieCoverMargin"
            android:text="@string/details"
            app:layout_constraintBottom_toBottomOf="@id/secondGroup"
            app:layout_constraintLeft_toRightOf="@id/secondMovieImage"
            app:layout_constraintRight_toRightOf="@id/secondGroup"/>
        <Button
            android:id="@+id/thirdButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/moveButtonHeight"
            android:layout_margin="@dimen/movieCoverMargin"
            android:text="@string/details"
            app:layout_constraintBottom_toBottomOf="@id/thirdGroup"
            app:layout_constraintLeft_toRightOf="@id/thirdMovieImage"
            app:layout_constraintRight_toRightOf="@id/thirdGroup"/>

        <TextView
            android:id="@+id/firstTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            tools:text="Movie Title"
            android:layout_margin="@dimen/movieCoverMargin"
            app:layout_constraintLeft_toRightOf="@id/firstMovieImage"
            app:layout_constraintRight_toRightOf="@id/firstGroup"
            app:layout_constraintTop_toTopOf="@id/firstGroup"
            app:layout_constraintBottom_toTopOf="@id/firstButton"/>
        <TextView
            android:id="@+id/secondTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Movie Title"
            android:textColor="#fff"
            android:layout_margin="@dimen/movieCoverMargin"
            app:layout_constraintLeft_toRightOf="@id/secondMovieImage"
            app:layout_constraintRight_toRightOf="@id/secondGroup"
            app:layout_constraintTop_toTopOf="@id/secondGroup"
            app:layout_constraintBottom_toTopOf="@id/secondButton"/>
        <TextView
            android:id="@+id/thirdTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            tools:text="Movie Title"
            android:layout_margin="@dimen/movieCoverMargin"
            app:layout_constraintLeft_toRightOf="@id/thirdMovieImage"
            app:layout_constraintRight_toRightOf="@id/thirdGroup"
            app:layout_constraintTop_toTopOf="@id/thirdGroup"
            app:layout_constraintBottom_toTopOf="@id/thirdButton"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>